--- a/OpenCLSoliditySHA3Solver/OpenCLSoliditySHA3Solver.vcxproj.filters
+++ b/OpenCLSoliditySHA3Solver/OpenCLSoliditySHA3Solver.vcxproj.filters
@@ -40,4 +40,7 @@
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
