--- a/SoliditySHA3Miner/SoliditySHA3Miner.csproj
+++ b/SoliditySHA3Miner/SoliditySHA3Miner.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <Version>2.2.3</Version>
+    <Version>1.1.0</Version>
     <Authors>crnxhh</Authors>
     <Company>Mineions@github</Company>
     <PackageLicenseUrl>https://github.com/Mineions/BNBTCminer/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl></PackageProjectUrl>
-    <RepositoryUrl></RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Mineions/BNBTCminer</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Mineions/BNBTCminer</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <Copyright></Copyright>
     <StartupObject>SoliditySHA3Miner.Program</StartupObject>
@@ -24,8 +24,8 @@
 
   <PropertyGroup>
     <DebugType Condition="'$(Configuration)'=='Release'">None</DebugType>
-    <Product>SoliditySHA3Miner</Product>
-    <PackageId>SoliditySHA3Miner</PackageId>
+    <Product>BNBTCminer</Product>
+    <PackageId>BNBTCminer</PackageId>
     <RootNamespace>SoliditySHA3Miner</RootNamespace>
     <AssemblyName>BNBTCminer</AssemblyName>
   </PropertyGroup>
